--- a/styles/flowershop.css
+++ b/styles/flowershop.css
@@ -394,6 +394,30 @@ header {
   .discount-btn {
     margin-left: 0px;
   }
+
+  /* instagram styles */
+
+  .instagram-images-container {
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  /* subscriber styles */
+  .subscribe {
+    width: 100%;
+  }
+
+  .subscribe-textbox-btn-container {
+    flex-direction: column;
+  }
+
+  .subscribe-textbox-btn-container input {
+    width: 180px !important;
+  }
+
+  .subscribe-title {
+    padding-top: 50px;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
@@ -425,5 +449,28 @@ header {
   .discount-container {
     gap: 10px;
     padding: 20px;
+  }
+
+  .instagram-images-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+  }
+
+  .instagram-images-container img {
+    border-radius: 10px;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  .instagram-images-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    margin-left: 60px;
+  }
+
+  .instagram-images-container img {
+    border-radius: 10px;
   }
 }
